src/objects/Batch_Template_Field__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Template__c</fullName>
        <label>Batch Template</label>
        <referenceTo>Batch_Template__c</referenceTo>
        <relationshipLabel>Batch Template Fields</relationshipLabel>
        <relationshipName>Batch_Template_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Integer value to specify the order of items in the grid.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If set to true the value will be required in order to save the record.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sticky_Field_Value__c</fullName>
        <description>This field stores the default value to be used if &quot;Sticky Field&quot; is true.</description>
        <inlineHelpText>This field stores the default value to be used if &quot;Sticky Field&quot; is true.</inlineHelpText>
        <label>Sticky Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sticky_Field_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked all Data Import records will have the specified field filled with the specified value, but it will not be shown in the grid. This is usefull in case that we have a constant value that we want to keep in the object but not show at the grid.</description>
        <inlineHelpText>If checked all Data Import records will have the specified field filled with the specified value, but it will not be shown in the grid. This is usefull in case that we have a constant value that we want to keep in the object but not show at the grid.</inlineHelpText>
        <label>Sticky Field Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sticky_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the field will be filled in with a default value.</description>
        <inlineHelpText>Indicates if the field will be filled in with a default value.</inlineHelpText>
        <label>Sticky Field</label>
        <type>Checkbox</type>
    </fields>
    <label>Batch Template Field</label>
    <nameField>
        <label>Batch Template Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Template Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>